# fcitx5-pinboard

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  pinboard.conf.in  pinboard.cpp  pinboard.h
